# projeto-tcc-ia

./: .gitignore  README.md  pyproject.toml  tcc  tcc.pub  teste.py
